fix: Hardcode API URL to resolve deployment issue

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         // *** UPDATED API URL LOGIC ***
         // This placeholder will be replaced by AWS Amplify during the build process.
         // For local testing, you can temporarily replace it with your actual URL.
-        const apiUrl = 'AMPLIFY_API_URL_PLACEHOLDER/generate';
+        const apiUrl = 'https://chodjwxt22.execute-api.ap-south-1.amazonaws.com/generate';
 
         // Auto-resize textarea
         promptInput.addEventListener('input', () => {
